tests/algorithms/x/C/divide_and_conquer/max_difference_pair.c
// Generated by Mochi 0.10.32 on 2025-08-11 15:26 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t max_diff_range_len;
size_t max_difference_len;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

long long min_slice(long long * a, size_t a_len, long long start, long long end);
long long max_slice(long long * a, size_t a_len, long long start, long long end);
long long * max_diff_range(long long * a, size_t a_len, long long start, long long end);
long long * max_difference(long long * a, size_t a_len);
void user_main();
int main(void);

long long min_slice(long long * a, size_t a_len, long long start, long long end) {
    long long m = a[(int)({long long _mochi_idx = start; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
    long long i = start + 1LL;
    while (i < end) {
        if (a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})] < m) {
            m = a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return m;
}

long long max_slice(long long * a, size_t a_len, long long start, long long end) {
    long long m = a[(int)({long long _mochi_idx = start; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
    long long i = start + 1LL;
    while (i < end) {
        if (a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})] > m) {
            m = a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return m;
}

long long * max_diff_range(long long * a, size_t a_len, long long start, long long end) {
    if ((end - start) == 1LL) {
        long long v = a[(int)({long long _mochi_idx = start; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
        {
            size_t *__tmp0_lens = malloc(2 * sizeof(size_t));
            __tmp0_lens[0] = v_len;
            __tmp0_lens[1] = v_len;
            long long* __tmp0_data = malloc(2 * sizeof(long long));
            __tmp0_data[0] = v;
            __tmp0_data[1] = v;
            max_diff_range_lens = __tmp0_lens;
            max_diff_range_len = 2;
            return __tmp0_data;
        }
    }
    long long mid = (start + end) / 2LL;
    long long *left = max_diff_range(a, a_len, start, mid);
    size_t left_len = max_diff_range_len;
    long long *right = max_diff_range(a, a_len, mid, end);
    size_t right_len = max_diff_range_len;
    long long small1 = left[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? left_len + _mochi_idx : _mochi_idx;})];
    long long big1 = left[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? left_len + _mochi_idx : _mochi_idx;})];
    long long small2 = right[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? right_len + _mochi_idx : _mochi_idx;})];
    long long big2 = right[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? right_len + _mochi_idx : _mochi_idx;})];
    long long min_left = min_slice(a, a_len, start, mid);
    long long max_right = max_slice(a, a_len, mid, end);
    long long cross_diff = max_right - min_left;
    long long left_diff = big1 - small1;
    long long right_diff = big2 - small2;
    if ((right_diff > cross_diff) && (right_diff > left_diff)) {
        {
            size_t *__tmp1_lens = malloc(2 * sizeof(size_t));
            __tmp1_lens[0] = small2_len;
            __tmp1_lens[1] = big2_len;
            long long* __tmp1_data = malloc(2 * sizeof(long long));
            __tmp1_data[0] = small2;
            __tmp1_data[1] = big2;
            max_diff_range_lens = __tmp1_lens;
            max_diff_range_len = 2;
            return __tmp1_data;
        }
    } else {
        if (left_diff > cross_diff) {
            {
                size_t *__tmp2_lens = malloc(2 * sizeof(size_t));
                __tmp2_lens[0] = small1_len;
                __tmp2_lens[1] = big1_len;
                long long* __tmp2_data = malloc(2 * sizeof(long long));
                __tmp2_data[0] = small1;
                __tmp2_data[1] = big1;
                max_diff_range_lens = __tmp2_lens;
                max_diff_range_len = 2;
                return __tmp2_data;
            }
        } else {
            {
                size_t *__tmp3_lens = malloc(2 * sizeof(size_t));
                __tmp3_lens[0] = min_left_len;
                __tmp3_lens[1] = max_right_len;
                long long* __tmp3_data = malloc(2 * sizeof(long long));
                __tmp3_data[0] = min_left;
                __tmp3_data[1] = max_right;
                max_diff_range_lens = __tmp3_lens;
                max_diff_range_len = 2;
                return __tmp3_data;
            }
        }
    }
}

long long * max_difference(long long * a, size_t a_len) {
    {
        long long* __ret4 = max_diff_range(a, a_len, 0LL, a_len);
        max_difference_len = max_diff_range_len;
        return __ret4;
    }
}

void user_main() {
    long long *result = max_difference(({long long *tmp = malloc(8 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 11LL; tmp[2] = 2LL; tmp[3] = 1LL; tmp[4] = 7LL; tmp[5] = 9LL; tmp[6] = 0LL; tmp[7] = 7LL; tmp;}), 8);
    size_t result_len = max_difference_len;
    puts(str_list_int(result, result_len));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
